[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Pure Rust implementation of a ROS client library"
license = "MIT"
name = "rosrust"
readme = "../README.md"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.9.11"

[dependencies]
byteorder = "1.4.3"
ctrlc = { version = "3.1.9", features = ["termination"] }
error-chain = "0.12.4"
lazy_static = "1.4.0"
log = { workspace = true }
hostname = "0.3.1"
regex = "1.5.4"
serde = { workspace = true }
serde_derive = { workspace = true }
xml-rpc = { workspace = true }
yaml-rust = "0.4.5"
crossbeam = "0.8.1"
socket2 = "0.4.1"
colored = "2.0.0"

[dependencies.ros_message]
path = "../ros_message"
version = "0.1.1"

[dependencies.rosrust_codegen]
path = "../rosrust_codegen"
version = "0.9.6"
